# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: my_workflow.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
page_analyzer/: app.py  database.py  parser.py  url_normalizer.py
page_analyzer/templates/: index.html
page_analyzer/templates/urls/: index.html  show.html
